# hivecode

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml
crates/hivecode-cli/: Cargo.toml
crates/hivecode-cli/src/: banner.rs  cli.rs  config.rs  interactive.rs  main.rs  renderer.rs
crates/hivecode-cli/src/cli/: auth.rs  config.rs  doctor.rs  init.rs  plugins.rs  single_prompt.rs  updater.rs
crates/hivecode-core/: Cargo.toml
crates/hivecode-core/src/: agent_manager.rs  auth.rs  branching.rs  compact.rs  config.rs  context.rs  conversation.rs  cost_optimizer.rs  error.rs  events.rs  git_context.rs  history.rs  hooks.rs  ide_bridge.rs  image.rs  keybinding_config.rs  lib.rs  memory.rs  model_router.rs  offline.rs  pdf.rs  plan.rs  plugins.rs  project_instructions.rs  prompt_cache.rs  session_replay.rs  state.rs  streaming_diff.rs  team.rs  thinking.rs  tool_output_compress.rs  types.rs  updater.rs  vim_mode.rs  voice.rs
crates/hivecode-mcp/: Cargo.toml
crates/hivecode-mcp/src/: client.rs  config.rs  error.rs  lib.rs  protocol.rs  transport.rs  types.rs
crates/hivecode-providers/: Cargo.toml
crates/hivecode-providers/src/: anthropic.rs  bedrock.rs  error.rs  foundry.rs  lib.rs  ollama.rs  openai.rs  registry.rs  traits.rs  types.rs  vertex.rs
crates/hivecode-security/: Cargo.toml
crates/hivecode-security/src/: checker.rs  error.rs  lib.rs  path_validator.rs  rules.rs  shell_security.rs
crates/hivecode-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/hivecode-tauri/src/: agent_commands.rs  auth_commands.rs  branch_commands.rs  commands.rs  compact_commands.rs  context_commands.rs  cost_optimizer_commands.rs  diff_commands.rs  events.rs  history_commands.rs  hooks_commands.rs  image_commands.rs  lib.rs  main.rs  memory_commands.rs  notification_commands.rs  offline_commands.rs  plan_commands.rs  plugin_commands.rs  project_commands.rs  query_engine.rs  replay_commands.rs  state.rs  thinking_commands.rs  update_commands.rs
crates/hivecode-tools/: Cargo.toml  NEW_TOOLS_INDEX.md  QUICK_REFERENCE.md  TOOL_IMPLEMENTATIONS.md
crates/hivecode-tools/src/: agent.rs  bash.rs  config_tool.rs  diff_tool.rs  error.rs  file_edit.rs  file_read.rs  file_write.rs  git_tool.rs  glob_tool.rs  grep.rs  lib.rs  lsp_tool.rs  notebook_edit.rs  parallel.rs  registry.rs  todo_tool.rs  tool_search.rs  traits.rs  web_fetch.rs
installers/linux/: CHECKSUMS.md  README.md  build.sh  hivecode.desktop  install-system.sh
installers/macos/: CHECKSUMS.md  Info.plist.override  README.md  build.sh  entitlements.plist
installers/windows/: CHECKSUMS.md  README.md  build.ps1  installer.iss
scripts/: build-installer.ps1  install-hivecode.ps1  installer.iss  setup.ps1  setup.sh
tests/: README.md  core_config_test.rs  core_types_test.rs  security_test.rs
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx
ui/src/components/: AuthPanel.tsx  BranchPanel.tsx  ChatPanel.tsx  CompactButton.tsx  CostOptimizerPanel.tsx  CostTracker.tsx  DiffView.tsx  ErrorBoundary.tsx  Header.tsx  HooksPanel.tsx  InputArea.tsx  KeyboardShortcuts.tsx  MemoryPanel.tsx  MessageBubble.tsx  ModelSelector.tsx  NotificationToast.tsx  OfflineIndicator.tsx  PanelMenu.tsx  ProjectInstructions.tsx  SessionList.tsx  SessionReplayPlayer.tsx  SettingsPanel.tsx  Sidebar.tsx  ThinkingPanel.tsx  ToolPanel.tsx
ui/src/hooks/: useAutoScroll.ts  useConnectivity.ts  useTheme.ts
ui/src/lib/: tauri.ts  types.ts
ui/src/stores/: appStore.ts  chatStore.ts  notificationStore.ts
ui/src/styles/: globals.css
