[workspace]
resolver = "2"
members = [
    "crates/hivecode-core",
    "crates/hivecode-providers",
    "crates/hivecode-tools",
    "crates/hivecode-security",
    "crates/hivecode-mcp",
    "crates/hivecode-tauri",
    "crates/hivecode-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["HivePowered <ai@hivepowered.ai>"]
repository = "https://github.com/hivepowered/hivecode"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
futures = "0.3"
tokio-stream = "0.1"
glob = "0.3"
grep-regex = "0.1"
grep-searcher = "0.1"
notify = "7"
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "0.8"
dirs = "5"
