[package]
name = "hivecode-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
rusqlite = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = "3"
