[package]
name = "hivecode-tools"
version.workspace = true
edition.workspace = true

[dependencies]
hivecode-core = { path = "../hivecode-core" }
hivecode-security = { path = "../hivecode-security" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
glob = { workspace = true }
regex = "1"
